--- a/src/main/webapp/resource/assets/css/login.css
+++ b/src/main/webapp/resource/assets/css/login.css
@@ -1,24 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
-
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form"%>
-<!DOCTYPE html>
-
-
-
-<html>
-<head>
-<title>Slide Navbar</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-<link href="../../resource/assets/css/login.css" rel="stylesheet">
-
-
-<style>
+@charset "UTF-8";
 
 body {
 
@@ -35,11 +15,6 @@ body {
     background-color: #fff;
 }
 
-.img_user {
-width:22px;
-height:22ppx;
-}
-
 .row>* {
 	flex-shrink: 1;
 }
@@ -54,7 +29,6 @@ height:22ppx;
 
 .card2 {
 	margin: 0px 16px 0 0;
-	margin-top:100px;
 }
 
 .logo-sign-in img {
@@ -308,100 +282,3 @@ a {
 		margin-bottom: 0 !important;
 	}
 }
-</style>
-
-</head>
-
-<body>
-	<div class="container">
-		<div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
-			<div class="card card0 border-0">
-				<div class="row d-flex">
-					<div class="col-lg-7">
-						<div class="card1">
-							<div class="row logo-content mt-4 " style="margin-left: 38px">
-								<img
-									src="https://user-images.githubusercontent.com/81857289/161365448-2d3a897e-8a96-4525-86b5-a7aa0cd7bb4f.png"
-									class="logo">
-								<div class="logo-text">
-									<h5>Học Viện Công Nghệ Bưu Chính Viễn Thông</h5>
-									<h5>Cơ sở TP.HCM</h5>
-								</div>
-							</div>
-						</div>
-						<div
-							class="row px-3 img-bk justify-content-center mt-4 mb-5 border-line">
-							<img
-								src="https://user-images.githubusercontent.com/81857289/161364965-b845a6d4-d9b6-4510-b344-1f0d0ce8e0ff.png"
-								class="image">
-						</div>
-					</div>
-
-					<div class="col-lg-5">
-						<div class="card2 card border-0 px-4 py-4">
-							<div class="row mb-1 px-3">
-								<div class="logo-sign-in">
-									<img
-										src="https://res.cloudinary.com/dwtlgxpxt/image/upload/e_gen_restore/c_limit,w_828/f_auto/q_auto/v1/imaginify/t13wg85pr5p409qwwbpk?_a=BAVCcWBy0" class="img_user">
-								</div>
-							</div>
-							<div class="row px-3 mb-4">
-								<div class="line"></div>
-								<small class="or text-center">Sign In</small>
-								<div class="line"></div>
-							</div>
-							<form:form method="POST" action="login" modelAttribute="loginForm" class="form" id="form-1">
-								<div class="row px-3 mb-4">
-									<label class="mb-1">
-										<h6 class="mb-0 text-sm">Tên Đăng Nhập</h6>
-									</label>
-									 <input id="email" name="email" required  type="text" placeholder="VD: taikhoan" >
-									
-								</div>
-								<div class="row px-3">
-									<label class="mb-1">
-										<h6 class="mb-0 text-sm">Mật Khẩu</h6>
-									</label>
-									<input id="password" required  name="password" type="password" placeholder="Nhập mật khẩu">
-									<form:errors path="email" cssClass="errors mt-2" ></form:errors>
-								</div>
-								
-								<div class="row px-3 mb-4">
-									<!-- 			<div
-										class="custom-control custom-checkbox custom-control-inline">
-										<input id="chk1" type="checkbox" name="chk"
-											class="custom-control-input"> <label for="chk1"
-											class="custom-control-label text-sm">Remember me</label>
-									</div>
-									<a href="#" class="ms-auto mb-0 text-sm">Forgot Password?</a> -->
-								</div>
-
-								<div class="g-recaptcha d-flex justify-content-center"
-									data-sitekey="6LcyNQMfAAAAANfcuBz9e1G4FIbW755pqOfvY6X_"></div>
-
-								<label class="mb-1">
-									<h6 class="text-sm errors">${tb }</h6>
-								</label>
-								<div class="row mb-3 px-3 d-flex justify-content-center">
-									<button type="submit" class="btn-hover color-1 text-center">Login</button>
-								</div>
-							</form:form>
-							<div class="row mb-4 px-3">
-								<!-- <small class="font-weight-bold">Don't have an account? <a
-									class="text-danger ">Register</a>
-								</small> -->
-							</div>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</div>
-	</div>
-	
-</body>
-
-
-
-
-</html>
